syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     ./proto/broker.proto

option go_package = "github.com/lthiede/cartero/proto";

message Request {
    oneof request {
        ProduceRequest produce_request = 1;
        ConsumeRequest consume_request = 2;
        CreatePartitionRequest create_partition_request = 3;
    }
}

message ProduceRequest {
    uint64 batch_id = 1;
    string partition_name = 2;
    Messages messages = 3;
}

message Messages {
    repeated bytes messages = 1;
}

message ConsumeRequest {
    uint64 start_lsn = 1;
    string partition_name = 2;
    uint32 min_num_messages = 3; 
}

message CreatePartitionRequest {
    string partition_name = 1;
}

message Response {
    oneof response {
        ProduceAck produce_ack = 1;
        ConsumeResponse consume_response = 2;
        CreatePartitionResponse create_partition_response = 3;
    }
}

message ProduceAck {
    uint64 batch_id = 1;
    uint32 start_message_id = 2;
    uint32 num_messages = 3;
    uint64 start_lsn = 4;
    string partition_name = 5;
}

message ConsumeResponse {
    uint64 end_of_safe_lsns_exclusively = 1;
    string partition_name = 2;
}

message CreatePartitionResponse {
    bool successful = 1;
    string partition_name = 2;
}